change background image, update footer, foreground SALALM

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,6 @@
   
     <li>Diseño: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
     <li>Sitio construido con: <a href="http://jekyllrb.com" target="_blank">Jekyll</a></li>
-    <li>Imagen de fondo: "El encuentro de dos mundos" (Adolfo León Ardila).</li>
+    <li>Imagen de fondo: "Canoa Literaria," Henry García Gaviria.</li>
   </ul>
 </footer>
