--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
           <ul>
             <li><a href="index.html">Inicio</a></li>
             {% for my_page in site.pages %}
+            {% if my_page.nav==false %}{% continue %}{% endif %}
             {% if my_page.title %}
             <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
             {% endif %}
