edited index and added presenter pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2111,6 +2111,11 @@ input, select, textarea {
 			.image.fit img {
 				width: 100%;
 			}
+		.image.thumbnail{
+			width: 50%;
+			height: 50%;
+		}
+		
 
 /* List */
 
