--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4000,6 +4000,7 @@ input, select, textarea {
 	flex-direction: row;
 	justify-content: space-between;
 	flex-wrap: wrap;
+	clear: both;
 }
 
 .gallery div {
