--- a/assets/css/piedefoto.css
+++ b/assets/css/piedefoto.css
@@ -4,6 +4,11 @@ img {
   height: auto;
 }
 
+hr {
+  border-color: rgba(255,255,255,0.5);
+  height: 10px !important;
+}
+
 @media screen and (max-width: 600px) {
 
   .image.left {
