--- a/assets/css/piedefoto.css
+++ b/assets/css/piedefoto.css
@@ -6,10 +6,14 @@ img {
 
 hr {
   border-color: rgba(255,255,255,0.5);
-  height: 10px !important;
 }
 
 @media screen and (max-width: 600px) {
+
+  .image.left,
+  .image.right {
+    max-width: 100% !important;
+  }
 
   .image.left {
     float:none;
